--- a/dbconfig.js.sample
+++ b/dbconfig.js.sample
@@ -1,7 +1,6 @@
-exports.creds = {
-  // Your mongo auth uri goes here
-  // e.g. mongodb://username:server@mongoserver:10059/somecollection
-  // nationalpark is the name of my mongo database
-  mongoose_auth_local: 'mongodb://localhost/nationalpark',
-  mongoose_auth_jitsu: 'copy and paste your unique connection string uri from the nodejitsu admin'
+module.exports = {
+  dbURI: 'mongodb://localhost/test',
+  origin: 'http://localhost:3333',
+  BASE_URL: 'http://localhost:3000',
+  PORT_NUMBER: 3000
 }
