--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "css-brunch": "latest",
     "expect.js": "latest",
     "express": "^4.13.0",
+    "gm": "^1.18.1",
     "handlebars-brunch": "latest",
+    "imagemagick": "^0.1.3",
     "javascript-brunch": "latest",
     "less-brunch": "latest",
     "moment": "^2.10.3",
