--- a/dbconfig.js.sample
+++ b/dbconfig.js.sample
@@ -4,5 +4,6 @@ module.exports = {
   BASE_URL: 'http://localhost:1234',
   PORT_NUMBER: 1234,
   public_path: '/../../public',
-  upload_path: '/api/uploads/'
+  upload_path: '/api/uploads/',
+  thumb_path: 'public/uploads/thumbs/'
 }
