--- a/dbconfig.js.sample
+++ b/dbconfig.js.sample
@@ -5,5 +5,6 @@ module.exports = {
   PORT_NUMBER: 1234,
   public_path: '/../../public',
   upload_path: '/api/uploads/',
+  image_path: 'public/uploads/',
   thumb_path: 'public/uploads/thumbs/'
 }
